--- a/app/smarttable/webapp/manifest.json
+++ b/app/smarttable/webapp/manifest.json
@@ -12,7 +12,7 @@
 		},
 		"dataSources": {
 			"mainService": {
-				"uri": "/odata/v2/cap-datasphere-hdi/",
+				"uri": "/odata/v2/technight/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0"
