--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
 		"@cap-js-community/odata-v2-adapter": "^1.13.7",
 		"@sap/cds": "^8",
 		"@sap/cds-dk": "^8.4.1",
-		"@sap/xssec": "^4",
+		"@sap/xssec": "^3",
 		"express": "^4",
 		"hdb": "^0.19.10",
 		"passport": "^0"
 	},
 	"devDependencies": {
+		"@sap/cds-dk": "^7",
 		"sqlite3": "^5.1.7"
 	},
 	"scripts": {
-		"start": "cds run",
+		"start": "cds-serve",
 		"start:hybrid": "cds watch --profile hybrid",
 		"cf:login": "cf login -a https://api.cf.eu10.hana.ondemand.com/ --sso"
 	},
@@ -56,7 +57,7 @@
 				"kind": "hana-cloud"
 			},
 			"auth": {
-				"kind": "basic",
+				"kind": "xsuaa",
 				"users": {
 					"technight@flexso.com": {
 						"password": "technight",
@@ -65,6 +66,11 @@
 						]
 					},
 					"*": false
+				}
+			},
+			"[production]": {
+				"auth": {
+					"kind": "xsuaa"
 				}
 			}
 		},
