--- a/app/router/xs-app.json
+++ b/app/router/xs-app.json
@@ -1,22 +1,17 @@
 {
-  "welcomeFile": "app/index.html",
-  "routes": [
-    {
-      "source": "^/app/(.*)$",
-      "target": "$1",
-      "localDir": ".",
-      "cacheControl": "no-cache, no-store, must-revalidate"
-    },
-    {
-      "source": "^/appconfig/",
-      "localDir": ".",
-      "cacheControl": "no-cache, no-store, must-revalidate"
-    },
-    {
-      "source": "^/(.*)$",
-      "target": "$1",
-      "destination": "srv-api",
-      "csrfProtection": true
-    }
-  ]
+	"welcomeFile": "app/index.html",
+	"routes": [
+		{
+			"source": "^/app/(.*)$",
+			"target": "/comflexsocapdsphdi/$1",
+			"service": "html5-apps-repo-rt",
+			"authenticationType": "xsuaa"
+		},
+		{
+			"source": "^/(.*)$",
+			"target": "$1",
+			"destination": "srv-api",
+			"csrfProtection": false
+		}
+	]
 }
