--- a/app/smarttable/ui5.yaml
+++ b/app/smarttable/ui5.yaml
@@ -16,6 +16,11 @@ builder:
   customTasks:
     - name: ui5-tooling-transpile-task
       afterTask: replaceVersion
+    - name: ui5-task-zipper
+      afterTask: generateVersionInfo
+      configuration:
+        includeDependencies: false
+        archiveName: technight
 server:
   customMiddleware:
     - name: ui5-tooling-transpile-middleware
