--- a/mta.yaml
+++ b/mta.yaml
@@ -53,6 +53,16 @@ modules:
           url: ~{srv-url}
           forwardAuthToken: true
       - name: technight-cap-datasphere-auth
+      - name: ui5-standalone-html5repo-runtime
+      - name: ui5-standalone-destination
+
+  - name: ui_deployer
+    type: com.sap.application.content
+    path: deployer/
+    requires:
+      - name: uideployer_html5_repo_host
+        parameters:
+          content-target: true
 resources:
   - name: technight-cap-datasphere-db
     type: com.sap.xs.hdi-container
@@ -79,3 +89,18 @@ resources:
       config:
         xsappname: technight-cap-datasphere-${org}-${space}
         tenant-mode: dedicated
+  - name: uideployer_html5_repo_host
+    parameters:
+      service-plan: app-host
+      service: html5-apps-repo
+    type: org.cloudfoundry.managed-service
+  - name: ui5-standalone-html5repo-runtime
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: html5-apps-repo
+      service-plan: app-runtime
+  - name: ui5-standalone-destination
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service-plan: lite
+      service: destination
